# DuckEnformer

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  train-multiGPUs.py  train.py
configs/: duck.yaml
configs/dataset/: EpigenomicsData.yaml
data/processed/enformerTgts/: targets_duck.txt
data/raw/: DuckEpigenomics.csv  DuckEpigenomics.xlsx  Duck_ASI_tracks_full.csv
scripts/: demo_smoke_test.py
scripts/evaluate_model/: DuckEnformer.evaluate.py
scripts/inference_model/: bw_track_extract.py  delta-inference.py  delta-inference_tracks.py  deltaAllele-Inference.py  eval_region_corrs.py  region-inference.py
scripts/model_construct/: DuckEnformer-train.sh  DuckEnformer-train.slurm
scripts/prepare_data/: DuckAlleleS.effects.compute.py  DuckAlleleS.files.tidy.py  DuckAlleleS.predict.effects.tidy.py  DuckAlleleS.predictedSet.Construct.py  DuckEpigenomics.Data.Statistics.py  DuckEpigenomics.bam2bw.py  DuckEpigenomics.createTargets.py  bam2bw.sh  runBam2Bw.slurm  split_dataset.sh
src/datasets/: dataset.py  mapping_target.py
src/engine/: evaluate.py  evaluator.py  inference.py  trainer.py  visual_evaluator.py
src/models/: enformer.py
src/utils/: load_data.py  logger_util.py
